--- a/week1day3/week1day3_blok2_tasks3-4.html
+++ b/week1day3/week1day3_blok2_tasks3-4.html
@@ -37,7 +37,7 @@
                     <h1>Новостной сайт</h1>
                 </td>
                 <td>
-                    <nav align="right">
+                    <nav>
                         <a href="#1-3">Статьи 1-3</a>
                         <a href="#4-6">Статьи 4-6</a>
                         <a href="#7-9">Статьи 7-9</a>
@@ -191,8 +191,5 @@
     <footer>
         <p>Это подвал новостного сайта</p>
     </footer>
-    <audio autoplay loop>
-        <source src="audio/rick-astley-never-gonna-give-you-up.mp3" type="audio/mpeg">
-    </audio>
 </body>
 </html>
