--- a/week1day5/week1day5.html
+++ b/week1day5/week1day5.html
@@ -7,14 +7,104 @@
 </head>
 <body>
     <section id="5-1-1">
-        <h1>4-1-1.</h1>
+        <h1>5-1-1.</h1>
         <div class="square"></div>
         <div class="circle">
             <div class="circle_inside"></div>
         </div>
     </section>
 
-    <section id="4-1-2">
+    <section id="5-1-2">
+        <h1>5-1-2.</h1>
+        <table class="table">
+                    <thead class="thead">
+                        <tr>
+                            <td>Head 1</td>
+                            <td>Head 2</td>
+                            <td>Head 3</td>
+                            <td>Head 4</td>
+                        </tr>
+                    </thead>
+                    <tbody class="tbody">
+                        <tr>
+                            <td>Data 1 1</td>
+                            <td>Data 1 2</td>
+                            <td>Data 1 3</td>
+                            <td>Data 1 4</td>
+                        </tr>
+                        <tr>
+                            <td>Data 2 1</td>
+                            <td>Data 2 2</td>
+                            <td>Data 3 3</td>
+                            <td>Data 4 4</td>
+                        </tr>
+                        <tr>
+                            <td>Data 3 1</td>
+                            <td>Data 3 2</td>
+                            <td>Data 3 3</td>
+                            <td>Data 3 4</td>
+                        </tr>
+                        <tr class="table_lastrow">
+                            <td>Data 4 1</td>
+                            <td>Data 4 2</td>
+                            <td>Data 4 3</td>
+                            <td>Data 4 4</td>
+                        </tr>
+                    </tbody>
+                </table>
+    </section>
+
+    <section id="5-1-3">
+        <h1>5-1-3.</h1>
+
+    </section>
+    <section id="5-1-4">
+        <h1>5-1-4.</h1>
+
+    </section>
+    <section id="5-1-5">
+        <h1>5-1-5.</h1>
+
+    </section>
+    <section id="5-1-6">
+        <h1>5-1-6.</h1>
+
+    </section>
+    <section id="5-1-7">
+        <h1>5-1-7.</h1>
+
+    </section>
+    <section id="5-1-8">
+        <h1>5-1-8.</h1>
+
+    </section>
+    <section id="5-1-9">
+        <h1>5-1-9.</h1>
+
+    </section>
+    <h1>БЛОК 2</h1>
+    <section id="5-2-1">
+        <h1>5-2-1.</h1>
+
+    </section>
+    <section id="5-2-2">
+        <h1>5-2-2.</h1>
+
+    </section>
+    <section id="5-2-3">
+        <h1>5-2-3.</h1>
+
+    </section>
+    <section id="5-2-4">
+        <h1>5-2-4.</h1>
+
+    </section>
+    <section id="5-2-5">
+        <h1>5-2-5.</h1>
+
+    </section>
+    <section id="5-2-6">
+        <h1>5-2-6.</h1>
 
     </section>
 </body>
