--- a/week1day5/week1day5.html
+++ b/week1day5/week1day5.html
@@ -60,7 +60,9 @@
     </section>
     <section id="5-1-4">
         <h1>5-1-4.</h1>
-
+        <span class="formula">
+            &#402(x) = a<span class="sub">0</span> + a<span class="sub">1</span>x + ... + a<span class="sub">n-1</span>x<span class="sup">n-1</span> + a<span class="sub">n</span>x<span class="sup">n</span>
+        </span>
     </section>
     <section id="5-1-5">
         <h1>5-1-5.</h1>
