Done task5 week1 day5

--- a/week1day5/week1day5.html
+++ b/week1day5/week1day5.html
@@ -56,17 +56,25 @@
 
     <section id="5-1-3">
         <h1>5-1-3.</h1>
-
-    </section>
-    <section id="5-1-4">
-        <h1>5-1-4.</h1>
         <span class="formula">
             &#402(x) = a<span class="sub">0</span> + a<span class="sub">1</span>x + ... + a<span class="sub">n-1</span>x<span class="sup">n-1</span> + a<span class="sub">n</span>x<span class="sup">n</span>
         </span>
     </section>
+
+    <section id="5-1-4">
+        <h1>5-1-4.</h1>
+        <div class="strip">
+            <span class="link1">Link 1</span>
+            <span class="link2">Link 2</span>
+            <span class="link3">Link 3</span>
+        </div>
+    </section>
+
     <section id="5-1-5">
         <h1>5-1-5.</h1>
-
+        <div class="diagram">
+            <span>75%</span>
+        </div>
     </section>
     <section id="5-1-6">
         <h1>5-1-6.</h1>
