--- a/week1day5/week1day5.html
+++ b/week1day5/week1day5.html
@@ -78,7 +78,22 @@
     </section>
     <section id="5-1-6">
         <h1>5-1-6.</h1>
+        <div class="form_container">
+            <span class="form_title">Регистрация пользователя</span>
+            <hr>
+            <span>*Обязательное поле</span>
+            <form class="form">
+                <label for="name">Имя *<input type="text" id="name"></label>
+                <label for="login">Логин *<input type="text" id="login"></label>
+                <label for="password">Пароль *<input type="password" id="password"></label>
+                <label for="password_repeat">Повтор пароля *<input type="password" id="password_repeat"></label>
+                <label for="email">Адрес электронной почты *<input type="email" id="email"></label>
+                <label for="email_confirm">Подтверждение адреса электронной почты *<input type="text" id="email_confirm"></label>
+                <button class="submit_button">Регистрация</button>
+                <button class="cancel_button">Отмена</button>
+            </form>
 
+        </div>
     </section>
     <section id="5-1-7">
         <h1>5-1-7.</h1>
