Done task6 week1 day5

--- a/week1day5/week1day5.html
+++ b/week1day5/week1day5.html
@@ -79,20 +79,64 @@
     <section id="5-1-6">
         <h1>5-1-6.</h1>
         <div class="form_container">
-            <span class="form_title">Регистрация пользователя</span>
+            <div class="form_title"><h3>Регистрация пользователя</h3>
             <hr>
-            <span>*Обязательное поле</span>
+            </div>
             <form class="form">
-                <label for="name">Имя *<input type="text" id="name"></label>
-                <label for="login">Логин *<input type="text" id="login"></label>
-                <label for="password">Пароль *<input type="password" id="password"></label>
-                <label for="password_repeat">Повтор пароля *<input type="password" id="password_repeat"></label>
-                <label for="email">Адрес электронной почты *<input type="email" id="email"></label>
-                <label for="email_confirm">Подтверждение адреса электронной почты *<input type="text" id="email_confirm"></label>
-                <button class="submit_button">Регистрация</button>
-                <button class="cancel_button">Отмена</button>
+                <div class="label_form">
+                    <ul>
+                        <li>
+                            <span class="explain_form">* Обязательное поле</span>
+                        </li>
+                        <li>
+                            <label for="name">Имя *</label>
+                        </li>
+                        <li>
+                            <label for="login">Логин *</label>
+                        </li>
+                        <li>
+                            <label for="password">Пароль *</label>
+                        </li>
+                        <li>
+                            <label for="password_repeat">Повтор пароля *</label>
+                        </li>
+                        <li>
+                            <label for="email">Адрес электронной<br> почты *</label>
+                        </li>
+                        <li>
+                            <label for="email_confirm">Подтверждение адреса<br>электронной почты *</label>
+                        </li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="input_form">
+                    <ul>
+                        <li><br></li>
+                        <li>
+                            <input type="text" id="name">
+                        </li>
+                        <li>
+                            <input type="text" id="login">
+                        </li>
+                        <li>
+                            <input type="password" id="password">
+                        </li>
+                        <li>
+                            <input type="password" id="password_repeat">
+                        </li>
+                        <li>
+                            <input type="email" id="email">
+                        </li>
+                        <li>
+                            <input type="text" id="email_confirm">
+                        </li>
+                        <li>
+                            <button class="submit_button">Регистрация</button>
+                            <button class="cancel_button">Отмена</button>
+                        </li>
+                    </ul>
+                </div>
             </form>
-
         </div>
     </section>
     <section id="5-1-7">
