Done task7 week1 day5

--- a/week1day5/week1day5task1-6.html
+++ b/week1day5/week1day5task1-6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Week 1 Day 5</title>
-    <link rel="stylesheet" href="week1day5.css">
+    <link rel="stylesheet" href="week1day5task1-6.css">
 </head>
 <body>
     <section id="5-1-1">
@@ -138,43 +138,6 @@
                 </div>
             </form>
         </div>
-    </section>
-    <section id="5-1-7">
-        <h1>5-1-7.</h1>
-
-    </section>
-    <section id="5-1-8">
-        <h1>5-1-8.</h1>
-
-    </section>
-    <section id="5-1-9">
-        <h1>5-1-9.</h1>
-
-    </section>
-    <h1>БЛОК 2</h1>
-    <section id="5-2-1">
-        <h1>5-2-1.</h1>
-
-    </section>
-    <section id="5-2-2">
-        <h1>5-2-2.</h1>
-
-    </section>
-    <section id="5-2-3">
-        <h1>5-2-3.</h1>
-
-    </section>
-    <section id="5-2-4">
-        <h1>5-2-4.</h1>
-
-    </section>
-    <section id="5-2-5">
-        <h1>5-2-5.</h1>
-
-    </section>
-    <section id="5-2-6">
-        <h1>5-2-6.</h1>
-
     </section>
 </body>
 </html>
