Done task 9 week 1 day 5

--- a/week1day5/week1day5task1-6.html
+++ b/week1day5/week1day5task1-6.html
@@ -139,5 +139,51 @@
             </form>
         </div>
     </section>
+    <section>
+        <h1>5-1-7.</h1>
+        <p>См. в отдельном файле <a href="week1day5task7.html">week1day5task7</a></p>
+    </section>
+    <section id="5-1-8">
+        <h1>5-1-8.</h1>
+
+    </section>
+    <section id="5-1-9">
+        <h1>5-1-9.</h1>
+        <div class="russia-flag">
+            <div class="white"></div>
+            <div class="blue"></div>
+            <div class="red"></div>
+        </div>
+        <p class="flag-title">Флаг России</p><br>
+        <div class="japan-flag">
+            <div class="red-circle"></div>
+        </div>
+        <p class="flag-title">Флаг Японии</p>
+    </section>
+    <h1>БЛОК 2</h1>
+    <section id="5-2-1">
+        <h1>5-2-1.</h1>
+
+    </section>
+    <section id="5-2-2">
+        <h1>5-2-2.</h1>
+
+    </section>
+    <section id="5-2-3">
+        <h1>5-2-3.</h1>
+
+    </section>
+    <section id="5-2-4">
+        <h1>5-2-4.</h1>
+
+    </section>
+    <section id="5-2-5">
+        <h1>5-2-5.</h1>
+
+    </section>
+    <section id="5-2-6">
+        <h1>5-2-6.</h1>
+
+    </section>
 </body>
 </html>
