Done task 8 week 1 day 5

--- a/week1day5/week1day5task1-6.html
+++ b/week1day5/week1day5task1-6.html
@@ -145,7 +145,15 @@
     </section>
     <section id="5-1-8">
         <h1>5-1-8.</h1>
-
+        <br>
+        <div class="menu1-div">
+            <ul  class="menu1">
+                <li class="submenu1-li"><a href="#" class="submenu1-a">Пункт меню 1</a></li>
+                <li class="submenu1-li"><a href="#" class="submenu1-a">Пункт меню 2</a></li>
+                <li class="submenu1-li"><a href="#" class="submenu1-a">Пункт меню 3</a></li>
+            </ul>
+        </div>
+        <br>
     </section>
     <section id="5-1-9">
         <h1>5-1-9.</h1>
