Done task 1 block 2 week 1 day 5

--- a/week1day5/week1day5task1-6.html
+++ b/week1day5/week1day5task1-6.html
@@ -171,7 +171,14 @@
     <h1>БЛОК 2</h1>
     <section id="5-2-1">
         <h1>5-2-1.</h1>
-
+        <div class="menu2-div">
+            <ul class="menu2-ul">
+                <li class="menu2-li"><a href="#" class="menu2-a">Menu item 1</a></li>
+                <li class="menu2-li"><a href="#" class="menu2-a">Menu item 1</a></li>
+                <li class="menu2-li"><a href="#" class="menu2-a">Menu item 1</a></li>
+                <li class="menu2-li"><a href="#" class="menu2-a">Menu item 1</a></li>
+            </ul>
+        </div>
     </section>
     <section id="5-2-2">
         <h1>5-2-2.</h1>
