Done task 2 block 2 week 1 day 5

--- a/week1day5/week1day5task1-6.html
+++ b/week1day5/week1day5task1-6.html
@@ -182,11 +182,11 @@
     </section>
     <section id="5-2-2">
         <h1>5-2-2.</h1>
-
+        <button class="button2">Кнопка 1</button>
     </section>
     <section id="5-2-3">
         <h1>5-2-3.</h1>
-
+        <div class="div3">Этот блок обернут градиентной рамкой</div>
     </section>
     <section id="5-2-4">
         <h1>5-2-4.</h1>
