Done task 3 block 2 week 1 day 5

--- a/week1day5/week1day5task1-6.html
+++ b/week1day5/week1day5task1-6.html
@@ -186,7 +186,10 @@
     </section>
     <section id="5-2-3">
         <h1>5-2-3.</h1>
-        <div class="div3">Этот блок обернут градиентной рамкой</div>
+        <div class="div3">
+            <p class="p3">Этот блок обернут градиентной рамкой
+            </p>
+        </div>
     </section>
     <section id="5-2-4">
         <h1>5-2-4.</h1>
