--- a/week1day5/week1day5task1-6.html
+++ b/week1day5/week1day5task1-6.html
@@ -205,7 +205,13 @@
     </section>
     <section id="5-2-5">
         <h1>5-2-5.</h1>
-
+        <div class="menu5-div">
+                <div class="menu5-div-div"></div>
+                <div class="menu5-div-div"></div>
+                <div class="menu5-div-div"></div>
+                <div class="menu5-div-div"></div>
+                <div class="menu5-div-div"></div>
+        </div>
     </section>
     <section id="5-2-6">
         <h1>5-2-6.</h1>
