Done task 6 block 2 week 1 day 5

--- a/week1day5/week1day5task1-6.html
+++ b/week1day5/week1day5task1-6.html
@@ -215,7 +215,9 @@
     </section>
     <section id="5-2-6">
         <h1>5-2-6.</h1>
-
+        <button class="button6">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button6-a">Нажми на меня</a>
+        </button>
     </section>
 </body>
 </html>
