Done task 2 week 2 day 1

--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -17,7 +17,9 @@
     </section>
     <section id="2">
         <h1>2.</h1>
-
+        <h3>Псевдоклассы</h3>
+        <p><span class="capital-letter">П</span>севдокласс в CSS — это ключевое слово, добавленное к селектору, которое определяет его особое состояние. Например, :hover может быть использован для изменения цвета кнопки при наведении курсора на нее.</p>
+        <p><span class="capital-letter">П</span>севдоклассы дают возможность стилизовать элемент на основе не только отношений в DOM-дереве, но и основываясь на внешних факторах, таких как история посещений (например, :visited), состояние содержимого (вроде, checked у некоторых элементов формы) или позиции курсора мыши (например, :hover определяет, находится ли курсор мыши над элементом).</p>
     </section>
     <section id="3">
         <h1>3.</h1>
