--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -17,12 +17,23 @@
     </section>
     <section id="2">
         <h1>2.</h1>
-        <h3>Псевдоклассы</h3>
-        <p><span class="capital-letter">П</span>севдокласс в CSS — это ключевое слово, добавленное к селектору, которое определяет его особое состояние. Например, :hover может быть использован для изменения цвета кнопки при наведении курсора на нее.</p>
-        <p><span class="capital-letter">П</span>севдоклассы дают возможность стилизовать элемент на основе не только отношений в DOM-дереве, но и основываясь на внешних факторах, таких как история посещений (например, :visited), состояние содержимого (вроде, checked у некоторых элементов формы) или позиции курсора мыши (например, :hover определяет, находится ли курсор мыши над элементом).</p>
+        <div class="div2">
+            <h3>Псевдоклассы</h3>
+            <p><span class="capital-letter">П</span>севдокласс в CSS — это ключевое слово, добавленное к селектору, которое определяет его особое состояние. Например, :hover может быть использован для изменения цвета кнопки при наведении курсора на нее.</p>
+            <p><span class="capital-letter">П</span>севдоклассы дают возможность стилизовать элемент на основе не только отношений в DOM-дереве, но и основываясь на внешних факторах, таких как история посещений (например, :visited), состояние содержимого (вроде, checked у некоторых элементов формы) или позиции курсора мыши (например, :hover определяет, находится ли курсор мыши над элементом).</p>
+        </div>
     </section>
     <section id="3">
         <h1>3.</h1>
+        <div class="div3">
+                <h3>Псевдоклассы</h3>
+                <div class="div3-div1">
+                    <p class="div3-p"><span class="italic3">Псевдокласс в CSS — это ключевое слово, добавленное к селектору, которое определяет его особое состояние.</span> Например, :hover может быть использован для изменения цвета кнопки при наведении курсора на нее.</p>
+                </div>
+                <div class="div3-div2">
+                    <p class="div3-p"><span class="italic3">Псевдоклассы дают возможность стилизовать элемент на основе не только отношений в DOM-дереве, но и</span> основываясь на внешних факторах, таких как история посещений (например, :visited), состояние содержимого (вроде, checked у некоторых элементов формы) или позиции курсора мыши (например, :hover определяет, находится ли курсор мыши над элементом).</p>
+                </div>
+        </div>
     </section>
     <section id="4">
         <h1>4.</h1>
