--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -37,6 +37,11 @@
     </section>
     <section id="4">
         <h1>4.</h1>
+            <div class="div4">
+                <h3>Псевдоклассы</h3>
+                <p class="div4-p1">Псевдокласс в CSS — это ключевое слово, добавленное к селектору, которое определяет его особое состояние. Например, :hover может быть использован для изменения цвета кнопки при наведении курсора на нее.</p>
+                <p class="div4-p2">Псевдоклассы дают возможность стилизовать элемент на основе не только отношений в DOM-дереве, но и основываясь на внешних факторах, таких как история посещений (например, :visited), состояние содержимого (вроде, checked у некоторых элементов формы) или позиции курсора мыши (например, :hover определяет, находится ли курсор мыши над элементом).</p>
+            </div>
     </section>
     <section id="5">
         <h1>5.</h1>
