Done task 5 week 2 day 1

--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -45,6 +45,7 @@
     </section>
     <section id="5">
         <h1>5.</h1>
+        <input class="input5" type="text" placeholder="Введите текст">
     </section>
     <section id="6">
         <h1>6.</h1>
