Done task 6 week 2 day 1

--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -49,6 +49,7 @@
     </section>
     <section id="6">
         <h1>6.</h1>
+        <input class="input6" type="text" placeholder="Введите текст">
     </section>
     <section id="7">
         <h1>7.</h1>
