--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -53,6 +53,11 @@
     </section>
     <section id="7">
         <h1>7.</h1>
+        <div class="div7">
+                <h3>Псевдоклассы</h3>
+                <p class="div7-div">Псевдокласс в CSS — это ключевое слово, добавленное к селектору, которое определяет его особое состояние. Например, :hover может быть использован для изменения цвета кнопки при наведении курсора на нее.</p>
+                <p class="div7-div">Псевдоклассы дают возможность стилизовать элемент на основе не только отношений в DOM-дереве, но и основываясь на внешних факторах, таких как история посещений (например, :visited), состояние содержимого (вроде, checked у некоторых элементов формы) или позиции курсора мыши (например, :hover определяет, находится ли курсор мыши над элементом).</p>
+        </div>
     </section>
     <section id="8">
         <h1>8.</h1>
