Done task 9 week 2 day 1

--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -69,6 +69,13 @@
     </section>
     <section id="9">
         <h1>9.</h1>
+        <ol class="ol9">
+            <li class="ol9-li">Первый</li>
+            <li class="ol9-li">Второй</li>
+            <li class="ol9-li">Третий</li>
+            <li class="ol9-li">Четвертый</li>
+            <li class="ol9-li">Пятый</li>
+        </ol>
     </section>
     <section id="10">
         <h1>10.</h1>
