Done task 10 week 2 day 1

--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -79,6 +79,13 @@
     </section>
     <section id="10">
         <h1>10.</h1>
+        <ol class="ol10">
+            <li class="ol10-li">Первый</li>
+            <li class="ol10-li">Второй</li>
+            <li class="ol10-li">Третий</li>
+            <li class="ol10-li">Четвертый</li>
+            <li class="ol10-li">Пятый</li>
+        </ol>
     </section>
     <section id="11">
         <h1>11.</h1>
