Done task 11 week 2 day 1

--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -89,6 +89,10 @@
     </section>
     <section id="11">
         <h1>11.</h1>
+        <div class="div11">
+            <input type="checkbox" class="checkbox11" id="ch">
+            <label for="ch" class="checkbox11-label">Чекбокс</label>
+        </div>
     </section>
     <section id="12">
         <h1>12.</h1>
