Done task 12 week 2 day 1

--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -96,6 +96,12 @@
     </section>
     <section id="12">
         <h1>12.</h1>
+        <div class="div12">
+            <input type="radio" class="radio12" id="radio1" name="rad">
+            <label for="radio1" class="radio12-label">Выбери меня</label>
+            <input type="radio" class="radio12" id="radio2" name="rad">
+            <label for="radio2" class="radio12-label">Выбери меня</label>
+        </div>
     </section>
     <section id="13">
         <h1>13.</h1>
