Done task 15 week 2 day 1

--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -126,6 +126,9 @@
     </section>
     <section id="15">
         <h1>15.</h1>
+        <div class="div15">
+            <div class="div15-div"></div>
+        </div>
     </section>
     <section id="16">
         <h1>16.</h1>
