--- a/week2day1/week2day1.html
+++ b/week2day1/week2day1.html
@@ -132,6 +132,20 @@
     </section>
     <section id="16">
         <h1>16.</h1>
+        <div class="div16">
+            <div class="div16-div div16-div1"><div class="div16-div-div"></div></div>
+            <div class="div16-div div16-div2"> <div class="div16-div-div"></div></div>
+            <div class="div16-div div16-div3"> <div class="div16-div-div"></div></div>
+            <div class="div16-div div16-div4"> <div class="div16-div-div"></div></div>
+            <div class="div16-div div16-div5"> <div class="div16-div-div"></div></div>
+            <div class="div16-div div16-div6"> <div class="div16-div-div"></div></div>
+            <div class="div16-div div16-div7"> <div class="div16-div-div"></div></div>
+            <div class="div16-div div16-div8"> <div class="div16-div-div"></div></div>
+            <div class="div16-div div16-div9"> <div class="div16-div-div"></div></div>
+            <div class="div16-div div16-div10"> <div class="div16-div-div"></div></div>
+            <div class="div16-div div16-div11"> <div class="div16-div-div"></div></div>
+            <div class="div16-div div16-div12"> <div class="div16-div-div"></div></div>
+        </div>
     </section>
 </body>
 </html>
