--- a/week2day2/week2day2.html
+++ b/week2day2/week2day2.html
@@ -21,6 +21,9 @@
     </section>
     <section id="4">
         <h1>4.</h1>
+        <div class="div4">
+            <input type="text" class="div4-input" placeholder="Введите текст" id="s"><label for="s"></label>
+        </div>
     </section>
     <section id="5">
         <h1>5.</h1>
