Done task 6 week 2 day 2

--- a/week2day2/week2day2.html
+++ b/week2day2/week2day2.html
@@ -35,6 +35,10 @@
     </section>
     <section id="6">
         <h1>6.</h1>
+        <div class="div6">
+            <img class="airplane" src="airplane.png"
+            alt="airplane">
+        </div>
     </section>
     <section id="7">
         <h1>7.</h1>
