Done task 7 week 2 day 2

--- a/week2day2/week2day2.html
+++ b/week2day2/week2day2.html
@@ -42,6 +42,10 @@
     </section>
     <section id="7">
         <h1>7.</h1>
+        <div class="div7">
+            <input class="div7-checkbox" type="checkbox" id="ch"><label for="ch"></label>
+            <div class="div7-div"></div>
+        </div>
     </section>
     <section id="8">
         <h1>8.</h1>
@@ -49,76 +53,5 @@
     <section id="9">
         <h1>9.</h1>
     </section>
-    <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
 </body>
 </html>
