Done task 8 week 2 day 2

--- a/week2day2/week2day2.html
+++ b/week2day2/week2day2.html
@@ -49,6 +49,12 @@
     </section>
     <section id="8">
         <h1>8.</h1>
+        <div class="div8">
+            <div class="square8">
+                <div class="circle8"></div>
+            </div>
+
+        </div>
     </section>
     <section id="9">
         <h1>9.</h1>
