--- a/week2day3/week2day3.html
+++ b/week2day3/week2day3.html
@@ -12,5 +12,13 @@
             <div class="div1-div"></div>
         </div>
     </section>
+    <section id="2">
+        <h1>2.</h1>
+        <div class="div2">
+            <div class="div2-div"></div>
+            <div class="div2-div"></div>
+            <div class="div2-div div2-last"></div>
+        </div>
+    </section>
 </body>
 </html>
