Done task 3 week 2 day 3

--- a/week2day3/week2day3.html
+++ b/week2day3/week2day3.html
@@ -20,5 +20,13 @@
             <div class="div2-div div2-last"></div>
         </div>
     </section>
+    <section id="3">
+        <h1>3.</h1>
+        <div class="div3">
+            <div class="div3-div"></div>
+            <div class="div3-div div3-middle"></div>
+            <div class="div3-div"></div>
+        </div>
+    </section>
 </body>
 </html>
