Done task 5 week 2 day 3

--- a/week2day3/week2day3.html
+++ b/week2day3/week2day3.html
@@ -28,5 +28,153 @@
             <div class="div3-div"></div>
         </div>
     </section>
+    <section id="4">
+        <h1>4.</h1>
+        <div class="div4">
+            <div class="div4-div">
+                <div class="image4">
+                    <span class="span4-image-span">Изображение</span>
+                </div>
+                <div class="div4-text">
+                    <span class="span4">Текст к изображению</span>
+                </div>
+                    <button class="button4">
+                        <span class="button4-span">
+                            Кнопка "Сохранить"
+                        </span></button>
+            </div>
+            <div class="div4-div">
+                <div class="image4">
+                    <span class="span4-image-span">Изображение</span>
+                </div>
+                <div class="div4-text">
+                    <span class="span4">Текст к изображению</span>
+                </div>
+                    <button class="button4">
+                        <span class="button4-span">
+                            Кнопка "Сохранить"
+                        </span></button>
+            </div>
+            <div class="div4-div">
+                <div class="image4">
+                    <span class="span4-image-span">Изображение</span>
+                </div>
+                <div class="div4-text">
+                    <span class="span4">Текст к изображению</span>
+                </div>
+                    <button class="button4">
+                        <span class="button4-span">
+                            Кнопка "Сохранить"
+                        </span></button>
+            </div>
+            <div class="div4-div">
+                <div class="image4">
+                    <span class="span4-image-span">Изображение</span>
+                </div>
+                <div class="div4-text">
+                    <span class="span4">Текст к изображению</span>
+                </div>
+                    <button class="button4">
+                        <span class="button4-span">
+                            Кнопка "Сохранить"
+                        </span></button>
+            </div>
+            <div class="div4-div">
+                <div class="image4">
+                    <span class="span4-image-span">Изображение</span>
+                </div>
+                <div class="div4-text">
+                    <span class="span4">Текст к изображению</span>
+                </div>
+                    <button class="button4">
+                        <span class="button4-span">
+                            Кнопка "Сохранить"
+                        </span></button>
+            </div>
+            <div class="div4-div">
+                <div class="image4">
+                    <span class="span4-image-span">Изображение</span>
+                </div>
+                <div class="div4-text">
+                    <span class="span4">Текст к изображению</span>
+                </div>
+                    <button class="button4">
+                        <span class="button4-span">
+                            Кнопка "Сохранить"
+                        </span></button>
+            </div>
+            <div class="div4-div">
+                <div class="image4">
+                    <span class="span4-image-span">Изображение</span>
+                </div>
+                <div class="div4-text">
+                    <span class="span4">Текст к изображению</span>
+                </div>
+                    <button class="button4">
+                        <span class="button4-span">
+                            Кнопка "Сохранить"
+                        </span></button>
+            </div>
+            <div class="div4-div">
+                <div class="image4">
+                    <span class="span4-image-span">Изображение</span>
+                </div>
+                <div class="div4-text">
+                    <span class="span4">Текст к изображению</span>
+                </div>
+                    <button class="button4">
+                        <span class="button4-span">
+                            Кнопка "Сохранить"
+                        </span></button>
+            </div>
+            <div class="div4-div">
+                <div class="image4">
+                    <span class="span4-image-span">Изображение</span>
+                </div>
+                <div class="div4-text">
+                    <span class="span4">Текст к изображению</span>
+                </div>
+                    <button class="button4">
+                        <span class="button4-span">
+                            Кнопка "Сохранить"
+                        </span></button>
+            </div>
+            <div class="div4-div">
+                <div class="image4">
+                    <span class="span4-image-span">Изображение</span>
+                </div>
+                <div class="div4-text">
+                    <span class="span4">Текст к изображению</span>
+                </div>
+                    <button class="button4">
+                        <span class="button4-span">
+                            Кнопка "Сохранить"
+                        </span></button>
+            </div>
+        </div>
+    </section>
+    <section id="5">
+        <h1>5.</h1>
+        <div class="div5">
+            <a href="#modal5" class="div5-modal-open">Открыть модальное окно</a>
+            <div id="modal5" class="div5-modal">
+                <div class="container5-modal">
+                    <div class="div5-div">
+                <div class="div5-div-h2">
+                    <span class="div5-h2">Заголовок</span>
+                </div>
+                <div class="div5-div-span">
+                    <span class="div5-span">Какой-то текст</span>
+                </div>
+                <button class="button5">
+                        <span class="button5-span">
+                            Кнопка "Сохранить"
+                        </span></button>
+            </div>
+                </div>
+                <a href="#div5-modal-close" class="div5-modal-close">&#10006 Закрыть окно</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
