Update task 6 week 2 day 3

--- a/week2day3/week2day3.html
+++ b/week2day3/week2day3.html
@@ -160,8 +160,10 @@
             <div id="modal5" class="div5-modal">
                 <div class="container5-modal">
                     <div class="div5-div">
+                        <a href="#div5-modal-close" class="div5-modal-close">&#10006 Закрыть окно</a>
                 <div class="div5-div-h2">
                     <span class="div5-h2">Заголовок</span>
+
                 </div>
                 <div class="div5-div-span">
                     <span class="div5-span">Какой-то текст</span>
@@ -172,8 +174,27 @@
                         </span></button>
             </div>
                 </div>
-                <a href="#div5-modal-close" class="div5-modal-close">&#10006 Закрыть окно</a>
             </div>
+        </div>
+    </section>
+    <section id="6">
+        <h1>6.</h1>
+        <div class="container6">
+            <div class="container-logo">
+                <span class="logo">Logo</span>
+            </div>
+            <div class="container-menu">
+                <div class="div-menu">
+                    <div class="menu">Home</div>
+                    <div class="menu">Team</div>
+                    <div class="menu">Services</div>
+                    <div class="menu">Contact</div>
+                </div>
+                <div class="container-button">
+                    <button class="button"><span class="button-text">Sign up</span></button>
+                </div>
+            </div>
+
         </div>
     </section>
 </body>
