--- a/week2day3/week2day3.html
+++ b/week2day3/week2day3.html
@@ -197,5 +197,24 @@
 
         </div>
     </section>
+    <section id="7">
+        <h1>7.</h1>
+        <div class="container">
+            <div class="container1">
+                <div class="container1-5 color">5</div>
+                <div class="container1-3 color">3</div>
+                <div class="container1-4 color">4</div>
+            </div>
+            <div class="container2">
+                <div class="container2-container1">
+                    <div class="container2-container1-8 color">8</div>
+                    <div class="container2-container1-8 color">8</div>
+                </div>
+                <div class="container2-container2">
+                    <div class="container2-container2-4 color">4</div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
