Done task 3 week 2 day 4

--- a/week2day4/week2day4.html
+++ b/week2day4/week2day4.html
@@ -131,7 +131,7 @@
         </div>
     </div>
 </section>
-<section id="1">
+<section id="2">
     <h1>2.</h1>
     <div class="container2">
         <div class="container-logo">
@@ -152,7 +152,14 @@
 </section>
 <section id="3">
     <h1>3.</h1>
-
+    <div class="container">
+            <div class="container1-5 color">5</div>
+            <div class="container1-3 color">3</div>
+            <div class="container1-4 color">4</div>
+            <div class="container2-container1-8 color">8</div>
+            <div class="container2-container2-8 color">8</div>
+            <div class="container2-container2-4 color">4</div>
+    </div>
 </section>
 </body>
 </html>
