done 2 task 1 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>week 3 day 5</title>
-    <script src="week3day5.js"></script>
+    <link rel="stylesheet" href="week3day5.css">
+    <script src="week3day5.js" defer></script>
 </head>
 <body>
 <!-- 1.Добавьте на страницу элемент div, установите ему класс container. Найдите этот элемент в DOM по классу как посредством getElementsByClassName. так и с помощью querySelector. Повторите тот же процесс но установив другой элемент div с атрибутом id равным main_containter !-->
 
 <div class="container"></div>
 <div id="main_container"></div>
+
+
+
 </body>
 </html>
