done 5 task 1 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -12,6 +12,10 @@
 <div class="container"></div>
 <div id="main_container"></div>
 
+<!--5. Реализуйте функцию, которая в качестве параметра принимает id инпута и возвращает значение в этом input’е-->
+
+<label for="input5"><input id=input5 type="text" value="text"></label>
+
 
 
 </body>
