done 6 task 1 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -14,9 +14,9 @@
 
 <!--5. Реализуйте функцию, которая в качестве параметра принимает id инпута и возвращает значение в этом input’е-->
 
-<label for="input5"><input id=input5 type="text" value="text"></label>
+<label for="input5"><input id='input5' type="text" value="text"></label>
 
-
+<input class="input6" type="text" value="text2">
 
 </body>
 </html>
