done 7 task 1 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -18,5 +18,9 @@
 
 <input class="input6" type="text" value="text2">
 
+<!-- 7. Добавьте элементу div в качестве потомков два элемента span с произвольным текстовым содержимым-->
+
+<div class="div7"></div>
+
 </body>
 </html>
