done 8 task 1 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -22,5 +22,12 @@
 
 <div class="div7"></div>
 
+<!--8. Реализуйте функцию, которая в качестве параметров принимает id элемента и строку, которую устанавливает в качестве текста в этом элементе. Для реализации используйте:-->
+<!--Свойство элемента textContent-->
+<!--Свойство элемента innerHTML-->
+
+<div id="div8-a"></div>
+<div id="div8-b"></div>
+
 </body>
 </html>
