done 9 task 1 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -14,9 +14,9 @@
 
 <!--5. Реализуйте функцию, которая в качестве параметра принимает id инпута и возвращает значение в этом input’е-->
 
-<label for="input5"><input id='input5' type="text" value="text"></label>
+<label for="input5"><input id='input5' type="text" value="5 text1"></label>
 
-<input class="input6" type="text" value="text2">
+<input class="input6" type="text" value="5 text2">
 
 <!-- 7. Добавьте элементу div в качестве потомков два элемента span с произвольным текстовым содержимым-->
 
@@ -28,6 +28,16 @@
 
 <div id="div8-a"></div>
 <div id="div8-b"></div>
+
+<!-- 9. Дан элемент. Найдите его первого потомка и сделайте его текст красного цвета.-->
+
+<div class="div9">
+    <div class="div9-child">9 первый потомок</div>
+    <div class="div9-child">9 второй потомок</div>
+    <div class="div9-child">9 третий потомок</div>
+    <div class="div9-child">9 четвертый потомок</div>
+    <div class="div9-child">9 пятый потомок</div>
+</div>
 
 </body>
 </html>
