done 10 task 1 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -39,5 +39,12 @@
     <div class="div9-child">9 пятый потомок</div>
 </div>
 
+<!--10. Дано три элемента. Найдите для первого элемента соседа снизу его соседа снизу (следующий элемент за соседним) и добавьте ему в конец текст '!!!'.-->
+
+<span class="div10">10 первый элемент</span>
+<span class="div10">10 второй элемент</span>
+<span class="div10">10 третий элемент</span>
+<span class="div10">10 четвертый элемент</span>
+
 </body>
 </html>
