done 1 task 2 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -46,5 +46,18 @@
 <span class="div10">10 третий элемент</span>
 <span class="div10">10 четвертый элемент</span>
 
+<!-- Упражнения. Часть 2.-->
+
+<br>
+<br>
+<br>
+
+<!-- 1. Создайте кнопку счётчик-кликов.-->
+
+<button class="button1" onclick="clicker()">0</button>
+
+<br>
+<br>
+
 </body>
 </html>
