done 3 task 2 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -69,5 +69,46 @@
 
 <br><br>
 
+<!--3. Дата таблица с числами. По нажатию на ячейку в неё должен заноситься квадрат числа, которое она содержит-->
+
+<table class="table3">
+    <tr>
+        <td class="td3">1</td>
+        <td class="td3">2</td>
+        <td class="td3">3</td>
+        <td class="td3">4</td>
+        <td class="td3">5</td>
+    </tr>
+    <tr>
+        <td class="td3">6</td>
+        <td class="td3">7</td>
+        <td class="td3">8</td>
+        <td class="td3">9</td>
+        <td class="td3">10</td>
+    </tr>
+    <tr>
+        <td class="td3">11</td>
+        <td class="td3">12</td>
+        <td class="td3">13</td>
+        <td class="td3">14</td>
+        <td class="td3">15</td>
+    </tr>
+    <tr>
+        <td class="td3">16</td>
+        <td class="td3">17</td>
+        <td class="td3">18</td>
+        <td class="td3">19</td>
+        <td class="td3">20</td>
+    </tr>
+    <tr>
+        <td class="td3">21</td>
+        <td class="td3">22</td>
+        <td class="td3">23</td>
+        <td class="td3">24</td>
+        <td class="td3">25</td>
+    </tr>
+</table>
+
+<br><br>
 </body>
 </html>
