done 4 task 2 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -110,5 +110,48 @@
 </table>
 
 <br><br>
+
+<!--4. Сделайте таблицу 5x5. Используя делегирование событий окрашивать красным цветом фон той ячейки, над которой в данный момент зависает курсор-->
+
+<table class="table4">
+    <tr>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+    </tr>
+    <tr>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+    </tr>
+    <tr>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+    </tr>
+    <tr>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+    </tr>
+    <tr>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+        <td class="td3"></td>
+    </tr>
+</table>
+
+<br><br>
+
 </body>
 </html>
