done 5 task 2 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -153,5 +153,12 @@
 
 <br><br>
 
+<!--// 5. Сделать простейшую валидацию: создать инпут, при расфокусе которого будет проверяться соответствие value input’а какой-либо строке-->
+
+<input type="text" id="input2">
+<label for="input2">введите e-mail</label>
+
+<br><br>
+
 </body>
 </html>
