done 6 task 2 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -160,5 +160,20 @@
 
 <br><br>
 
+<!--// 6. Реализовать делегирование события фокус от элемента формы к инпутам: при фокусе граница инпута должна менять цвет и ширину-->
+
+<form class="form6">
+    <label for="input61">имя</label>
+    <input class="input" type="text" id="input61">
+    <label for="input62">фамилия</label>
+    <input class="input" type="text" id="input62">
+    <label for="input63">отчество</label>
+    <input class="input" type="text" id="input63">
+    <label for="input64">город</label>
+    <input class="input" type="text" id="input64">
+    <label for="input65">телефон</label>
+    <input class="input" type="text" id="input65">
+</form>
+<br><br>
 </body>
 </html>
