done 7 task 2 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -175,5 +175,10 @@
     <input class="input" type="text" id="input65">
 </form>
 <br><br>
+
+<!--7. Создайте кнопку, которая удаляет себя со страницы по нажатию на неё-->
+
+<button class="button7">Delete button</button>
+<br><br>
 </body>
 </html>
