done 8 task 2 chapter 5 day 3 week

--- a/week3day5/week3day5.html
+++ b/week3day5/week3day5.html
@@ -180,5 +180,24 @@
 
 <button class="button7">Delete button</button>
 <br><br>
+
+<!--8. Создайте список ol с несколькими элементами li. По нажатию на каждый элемент списка этот элемент должен удаляться-->
+
+<ol class="ol8">
+           <li>Element</li>
+          <li>Element</li>
+          <li>Element</li>
+          <li>Element</li>
+          <li>Element</li>
+          <li>Element</li>
+          <li>Element</li>
+          <li>Element</li>
+          <li>Element</li>
+          <li>Element</li>
+          <li>Element</li>
+          <li>Element</li>
+          <li>Element</li>
+</ol>
+
 </body>
 </html>
