do 6 task 1 day 4 week

--- a/week4day1/week4day1.html
+++ b/week4day1/week4day1.html
@@ -6,6 +6,6 @@
     <script src="week4day1.js" defer></script>
 </head>
 <body>
-
+        <div class="element" style="height: 300px; width: 300px; background: #0039A6">начальный текст</div>
 </body>
 </html>
