--- a/Exam/Exam1.html
+++ b/Exam/Exam1.html
@@ -48,7 +48,7 @@
                     </select>
                 </td>
                 <td class="table_data null_column">
-                    <input type="checkbox" checked>
+                    <input id="checkbox" class='checkbox' type="checkbox" checked><label for="checkbox"></label>
                 </td>
             </tr>
             <tr class="row">
@@ -73,8 +73,7 @@
                     </select>
                 </td>
                 <td class="table_data null_column">
-                    <input type="checkbox">
-                </td>
+                    <input id="checkbox1" class='checkbox' type="checkbox"><label for="checkbox1"></label>
             </tr>
             <tr class="row">
                 <td class="table_data">
@@ -98,7 +97,7 @@
                     </select>
                 </td>
                 <td class="table_data null_column">
-                    <input type="checkbox">
+                    <input id="checkbox2" class='checkbox' type="checkbox"><label for="checkbox2"></label>
                 </td>
             </tr>
             <tr class="row">
@@ -123,7 +122,7 @@
                     </select>
                 </td>
                 <td class="table_data null_column">
-                    <input type="checkbox" checked>
+                    <input id="checkbox3" class='checkbox' type="checkbox" checked><label for="checkbox3"></label>
                 </td>
             </tr>
         </tbody>
