--- a/Exam/Exam1.html
+++ b/Exam/Exam1.html
@@ -130,6 +130,7 @@
     </div>
     <div class="button-container">
         <button class="button">Добавить столбец</button>
+        <button class="button-row">Добавить строку</button>
     </div>
 </body>
 </html>
