--- a/Exam/Exam1.html
+++ b/Exam/Exam1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Exam1</title>
     <link rel="stylesheet" href="Exam1.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="MobileOptimized" content="320">
     <script src="Exam1.js" defer></script>
 </head>
 <body>
