--- a/Exam/Exam1.html
+++ b/Exam/Exam1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Exam1</title>
@@ -18,6 +18,7 @@
         </caption>
         <thead>
             <tr class="row">
+                <th class="table_head">id</th>
                 <th class="table_head">Имя</th>
                 <th class="table_head">Тип</th>
                 <th class="table_head">Длина/значение</th>
@@ -29,6 +30,7 @@
         </thead>
         <tbody>
             <tr class="row">
+                <td class="table_data">1</td>
                 <td class="table_data">
                     <input class="table_cell_fill" type="text" value="id" readonly>
                 </td>
@@ -54,6 +56,7 @@
                 </td>
             </tr>
             <tr class="row">
+                <td class="table_data">2</td>
                 <td class="table_data">
                     <input class="table_cell_fill" type="text" value="login" readonly>
                 </td>
@@ -78,6 +81,7 @@
                     <input id="checkbox1" class='checkbox' type="checkbox"><label for="checkbox1"></label>
             </tr>
             <tr class="row">
+                <td class="table_data">3</td>
                 <td class="table_data">
                     <input class="table_cell_fill" type="text" value="password" readonly>
                 </td>
@@ -103,6 +107,7 @@
                 </td>
             </tr>
             <tr class="row">
+                <td class="table_data">4</td>
                 <td class="table_data">
                     <input class="table_cell_fill" type="text" value="regdata" readonly>
                 </td>
